--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "http": "^0.0.1-security",
+    "mongoose": "^6.1.0",
     "path": "^0.12.7"
   }
 }
