--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "http": "^0.0.1-security",
+    "mocha": "^9.1.3",
     "mongoose": "^6.1.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "supertest": "^6.1.6"
   }
 }
