--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "http": "^0.0.1-security",
     "mocha": "^9.1.3",
+    "mongodb": "^4.2.2",
     "mongoose": "^6.1.0",
     "path": "^0.12.7",
     "supertest": "^6.1.6"
