--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.0",
     "path": "^0.12.7",
+    "socket.io": "^4.4.0",
     "supertest": "^6.1.6"
   }
 }
