--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --exit",
     "start": "node server.js"
   },
   "author": "",
@@ -14,11 +14,14 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "http": "^0.0.1-security",
-    "mocha": "^9.1.3",
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.0",
     "path": "^0.12.7",
-    "socket.io": "^4.4.0",
+    "socket.io": "^4.4.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^9.1.3",
     "supertest": "^6.1.6"
   }
 }
