--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "chai": "^4.3.4",
+    "cypress": "^9.2.0",
     "mocha": "^9.1.3",
     "supertest": "^6.1.6"
   }
