--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,23 @@ on:
     branches:
       - main
 jobs:
+  tests:
+      runs-on: ubuntu-latest
+      steps:
+        # Checkout the Repo
+        - uses: actions/checkout@v2
+
+        # Install Node 12
+        - name: Setup Node
+          uses: actions/setup-node@v1
+          with:
+            node-version: 12
+
+        # Install dependencies
+        - run: npm install
+
+        # Run tests
+        - run: npm run unit
   cypress-run:
     runs-on: ubuntu-20.04
     # let's make sure our tests pass on Chrome browser
